# langchain-tutorials

./: .gitignore  README.md  pyproject.toml  requirements.txt
tutorials/: 1.structure-output.ipynb  structure-output.ipynb
tutorials/utils/: __init__.py  chat_model.py  openai_util.py  sound_script.py
